# Teaching-ros2-gz-rovers

rover_demo_gz/: CMakeLists.txt  package.xml
rover_demo_gz/launch/: sim.launch.py  spawn_drone.launch.py  spawn_leo.launch.py
rover_demo_gz/urdf/: drone.urdf.xacro  leo.urdf.xacro  leo_sim.sdf  leo_sim.urdf  leo_sim.urdf.xacro  macros.xacro
rover_demo_gz/worlds/: empty.sdf  mars1.sdf  walls.sdf
